--- a/index.html
+++ b/index.html
@@ -76,5 +76,45 @@
         <p>© 2025 Annisa Fitriani</p>
     </footer>
     </style>
+    <!-- Cookie Consent Banner -->
+<div id="cookie-banner" style="position: fixed; bottom: 20px; left: 20px; right: 20px; max-width: 600px; margin: auto; background: #1e2a38; color: #fff; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.3); z-index: 9999; font-family: 'Segoe UI', sans-serif; display: flex; flex-direction: column; align-items: center; gap: 10px;">
+  <span style="text-align: center;">
+    🍪 Situs ini menggunakan cookie untuk meningkatkan pengalaman pengguna. Dengan menggunakan situs ini, Anda menyetujui penggunaan cookie kami.
+  </span>
+  <button onclick="acceptCookies()" style="background-color: #00aaff; color: white; border: none; padding: 10px 20px; border-radius: 6px; cursor: pointer; font-weight: bold; transition: 0.3s;">
+    Saya Setuju
+  </button>
+</div>
+<script>
+  function setCookie(name, value, days) {
+    const d = new Date();
+    d.setTime(d.getTime() + (days*24*60*60*1000));
+    const expires = "expires=" + d.toUTCString();
+    document.cookie = name + "=" + value + ";" + expires + ";path=/";
+  }
+
+  function getCookie(name) {
+    const cname = name + "=";
+    const decodedCookie = decodeURIComponent(document.cookie);
+    const ca = decodedCookie.split(';');
+    for(let i = 0; i < ca.length; i++) {
+      let c = ca[i].trim();
+      if (c.indexOf(cname) === 0) return c.substring(cname.length, c.length);
+    }
+    return "";
+  }
+
+  function acceptCookies() {
+    setCookie("cookieConsent", "true", 30);
+    document.getElementById("cookie-banner").style.display = "none";
+  }
+
+  window.onload = function () {
+    if (getCookie("cookieConsent") === "true") {
+      document.getElementById("cookie-banner").style.display = "none";
+    }
+  };
+</script>
+
 </body>
 </html>
