--- a/about.html
+++ b/about.html
@@ -17,34 +17,42 @@
     <main>
         <h2>Data Pribadi</h2>
         <p>Halaman ini berisi tentang informasi pribadi saya</p>
-       <div class="table-container">
-    <table border="1">
-        <tr>
-            <th>Informasi</th>
-            <th>Detail</th>
-        </tr>
-        <tr>
-            <td>Nama</td>
-            <td>Annisa Fitriani</td>
-        </tr>
-        <tr>
-            <td>NIM</td>
-            <td>220709027</td>
-        </tr>
-        <tr>
-            <td>Program Studi</td>
-            <td>Perpustakaan dan Sains Informasi</td>
-        </tr>
-        <tr>
-            <td>Fakultas</td>
-            <td>Ilmu Budaya</td>
-        </tr>
-        <tr>
-            <td>Universitas</td>
-            <td>Universitas Sumatera Utara</td>
-        </tr>
-    </table>
-</div>
+        <div class="table-container">
+            <table border="1">
+                <tr>
+                    <th>Informasi</th>
+                    <th>Detail</th>
+                </tr>
+                <tr>
+                    <td>Nama</td>
+                    <td>Annisa Fitriani</td>
+                </tr>
+                <tr>
+                    <td>NIM</td>
+                    <td>220709027</td>
+                </tr>
+                <tr>
+                    <td>Program Studi</td>
+                    <td>Perpustakaan dan Sains Informasi</td>
+                </tr>
+                <tr>
+                    <td>Fakultas</td>
+                    <td>Ilmu Budaya</td>
+                </tr>
+                <tr>
+                    <td>Universitas</td>
+                    <td>Universitas Sumatera Utara</td>
+                </tr>
+                <tr>
+                    <td>LinkedIn</td>
+                    <td><a href="https://www.linkedin.com/in/annisa-fitriani-747a26284?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">Profil LinkedIn</a></td>
+                </tr>
+                <tr>
+                    <td>Curriculum Vitae</td>
+                    <td><a href="https://drive.google.com/file/d/ID-file-CV/view" target="_blank">Lihat CV</a></td>
+                </tr>
+            </table>
+        </div>
         <a href="index.html" class="back-link">Kembali ke Beranda</a>
     </main>
     <footer>
