--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                 </tr>
                 <tr>
                     <td>Curriculum Vitae</td>
-                    <td><a href="https://drive.google.com/file/d/ID-file-CV/view" target="_blank">Lihat CV</a></td>
+                    <td><a href="https://drive.google.com/file/d/1NpLJOuCqlnBP2qFwh55Vd9D0mgPTlCwJ/view?usp=drivesdk" target="_blank">Lihat CV</a></td>
                 </tr>
             </table>
         </div>
